# tinyoct

./: .gitignore  AGENT.md  CLAUDE.md  GEMINI.md  README.md  instructions.md  pyproject.toml  requirements.txt  setup.py  setup_projects.py  setup_runpod.sh  training_nb.ipynb
configs/: ablation.yaml  base.yaml  experiment_colab.yaml  experiment_crossscanner.yaml  experiment_oct2017.yaml  experiment_resnet.yaml  smoketest.yaml  smoketest_octmnist.yaml  smoketest_resnet.yaml
outputs/: classification_report.txt  eval_results.json
paper/: main.tex  references.bib
scripts/: compare_models.py  download_gdrive.py  evaluate.py  evaluate_local.py  generate_roc.py  plot_laplacian.py  plot_oct_samples.py  run_all_experiments.py  run_evaluation.py  train.py  visualize_attention.py
tests/: test_model.py
tinyoct/configs/: experiment_oct2017.yaml
tinyoct/data/: __init__.py  datamodule.py  dataset.py  medmnist_dataset.py  transforms.py
tinyoct/evaluation/: __init__.py  evaluator.py  visualizer.py
tinyoct/losses/: __init__.py  combined_loss.py  focal_loss.py  orient_loss.py  proto_loss.py  supcon_loss.py
tinyoct/models/: __init__.py  laplacian.py  prototype_head.py  resnet_baseline.py  rlap.py  tinyoct.py
tinyoct/scripts/: download_datasets.py  evaluate.py  run_ablations.py  train.py  visualize_attention.py
tinyoct/src/: __init__.py
tinyoct/src/evaluation/: __init__.py
tinyoct/src/losses/: __init__.py  combined_loss.py
tinyoct/tests/: test_model.py
tinyoct/training/: calibration.py  trainer.py
tinyoct/utils/: config.py  metrics.py  seed.py
(+2 files in other folders)
