[project]
name = "tinyoct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.8",
    "medmnist>=3.0.2",
    "monai>=1.5.2",
    "omegaconf>=2.3.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.1",
]
